--- a/rro_overlays/SettingsOverlayEvergo/res/values/config.xml
+++ b/rro_overlays/SettingsOverlayEvergo/res/values/config.xml
@@ -21,6 +21,14 @@
     <!-- Device specific doze package -->
     <string name="config_customDozePackage" translatable="false">org.lineageos.settings/org.lineageos.settings.doze.DozeSettingsActivity</string>
 
+    <!-- Defines the location of the fingerprint sensor on the device
+         0 = back
+         1 = front
+         2 = left side
+         3 = right side
+    -->
+    <integer name="config_fingerprintSensorLocation">3</integer>
+
     <!-- Whether or not the device is capable of multiple levels of vibration intensity.
          Note that this is different from whether it can control the vibration amplitude as some
          devices will be able to vary their amplitude but do not possess enough dynamic range to
