--- a/rro_overlays/FrameworksResOverlayEvergo/res/xml/power_profile.xml
+++ b/rro_overlays/FrameworksResOverlayEvergo/res/xml/power_profile.xml
@@ -104,6 +104,7 @@
         <value>22.7</value>
     </array>
     <item name="battery.capacity">5000</item>
+    <item name="battery.typical">5000</item>
     <item name="wifi.controller.idle">0</item>
     <item name="wifi.controller.rx">0</item>
     <item name="wifi.controller.tx">0</item>
