--- a/rro_overlays/FrameworksResOverlayEvergo/res/xml/power_profile.xml
+++ b/rro_overlays/FrameworksResOverlayEvergo/res/xml/power_profile.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <device name="Android">
-    <item name="ambient.on.display0">0.1</item>
-    <item name="screen.on.display0">0.1</item>
-    <item name="screen.full.display0">0.1</item>
-    <item name="bluetooth.active">0.1</item>
-    <item name="bluetooth.on">0.1</item>
-    <item name="wifi.on">0.1</item>
-    <item name="wifi.active">0.1</item>
-    <item name="wifi.scan">0.1</item>
-    <item name="audio">0.1</item>
-    <item name="video">0.1</item>
-    <item name="camera.flashlight">0.1</item>
-    <item name="camera.avg">0.1</item>
-    <item name="gps.on">0.1</item>
-    <item name="radio.active">0.1</item>
-    <item name="radio.scanning">0.1</item>
+    <item name="none">0</item>
+    <item name="screen.on.display0">100</item>
+    <item name="screen.full.display0">800</item>
+    <item name="bluetooth.active">29.17</item>
+    <item name="bluetooth.on">1.12</item>
+    <item name="wifi.on">0.51</item>
+    <item name="wifi.active">146.6</item>
+    <item name="wifi.scan">14.51</item>
+    <item name="audio">100.0</item>
+    <item name="video">150.0</item>
+    <item name="camera.flashlight">500</item>
+    <item name="camera.avg">600</item>
+    <item name="gps.on">10</item>
+    <item name="radio.active">60</item>
+    <item name="radio.scanning">3</item>
     <array name="radio.on">
-        <value>0.2</value>
-        <value>0.1</value>
+        <value>6</value>
+        <value>5</value>
+        <value>4</value>
+        <value>3</value>
+        <value>3</value>
     </array>
     <array name="cpu.clusters.cores">
         <value>6</value>
@@ -95,10 +98,10 @@
         <value>189.07</value>
         <value>212.36</value>
     </array>
-    <item name="cpu.idle">0.1</item>
+    <item name="cpu.idle">1.11</item>
     <item name="cpu.suspend">5</item>
     <item name="cpu.active">2.55</item>
-    <item name="cpu.cluster_power.cluster0">1.11</item>
+    <item name="cpu.cluster_power.cluster0">2.11</item>
     <item name="cpu.cluster_power.cluster1">2.22</item>
     <array name="memory.bandwidths">
         <value>22.7</value>
