--- a/rro_overlays/FrameworksResOverlayEvergo/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayEvergo/res/values/config.xml
@@ -313,6 +313,7 @@
     <!-- Minimum screen brightness setting allowed by the power manager.
          The user is forbidden from setting the brightness below this level. -->
      <integer name="config_screenBrightnessSettingMinimum">10</integer>
+     <integer name="config_screenBrightnessSettingMaximum">255</integer>
 
     <!-- Array of light sensor lux values to define our levels for auto backlight brightness support.
          The N entries of this array define N + 1 control points as follows:
