--- a/rro_overlays/SystemUIOverlayEvergo/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlayEvergo/res/values/config.xml
@@ -24,4 +24,6 @@
     <dimen name="rounded_corner_content_padding">52.0px</dimen>
     <dimen name="status_bar_padding_end">3.0px</dimen>
     <dimen name="status_bar_padding_start">3.0px</dimen>
+    <dimen name="physical_fingerprint_sensor_center_screen_location_y">955px</dimen>
+    <dimen name="physical_fingerprint_sensor_center_screen_location_x">1080px</dimen>
 </resources>
