evergo: overlays: Update fastcharge status path

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -58,6 +58,7 @@
         <item>955</item> <!--item>sensorLocationY</item-->
         <item>110</item> <!--item>sensorRadius</item-->
     </array>
+
     <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
-    <string name="config_oemFastChargerStatusPath" translatable="false">/sys/class/power_supply/usb/pd_active</string>
+    <string name="config_oemFastChargerStatusPath" translatable="false">/sys/devices/platform/11e00000.i2c0/i2c-0/0-0066/power_supply/sc8551-standalone/sc_vbus_present</string>
 </resources>
